--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script type="module" src="assets/script.js" defer=""></script>
   </head>
   <body>
+    <img src="https://github.com/DARJYO/virtXpro/blob/main/img/vxp.png" height="25%" width="25%">  
     <div class="container">
       <div class="row">
         <div class="column">
@@ -34,7 +35,7 @@
       <div class="row">
         <div class="column-double">
           <div class="column-left">
-            <h1>CONTRIBUTE TO THIS PROJECT</h1>
+            <h1>Contribute To Open Source with DARJYO</h1>
             <h2>A project for first-time contributions</h2>
             <p>This is a tutorial to help 2nd-time contributors participate in a simple and easy project. 
              Get more comfortable using GitHub and make your first open source contribution. 
