--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script type="module" src="assets/script.js" defer=""></script>
   </head>
   <body>
-    <img src="https://github.com/DARJYO/virtXpro/blob/main/img/vxp.png" height="25%" width="25%">  
+    
     <div class="container">
       <div class="row">
         <div class="column">
@@ -70,8 +70,10 @@
         </div>
       </div>
 
-      <div class="searchContainer">
+  <!--    <div class="searchContainer">
         <input id="searchbar" type="search" name="search" placeholder="Search for your card here!" />
+      -->
+      
       </div> <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
