--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Domine&amp;display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
-    <link rel="icon" type="image/png" href="<img src="https://github.com/DARJYO/virtXpro/blob/main/img/vxp.png" height="25%" width="25%" />
+    <link rel="icon" type="image/png" href="https://github.com/DARJYO/virtXpro/blob/main/img/vxp.png" height="25%" width="25%" />
     <title>Contribute To Open Source with DARJYO</title>
     <script type="module" src="assets/script.js" defer=""></script>
   </head>
