--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous"></script>
           </div>
           <!-- / Night Mode Creation -->
+<img src="https://github.com/DARJYO/virtXpro/blob/main/img/vxp.png" height="25%" width="25%">  
+          
         </div>
       </div>
       <div class="row">
