--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </div>
       </div>
 
-// <div class="searchContainer">
+ <div class="searchContainer">
         <input id="searchbar" type="search" name="search" placeholder="Search for your card here!" />
-   //
+  
       
       </div> <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
